src/snapshots/notabene__linter__tests__duplicate_change_type-2.snap
---
source: src/linter.rs
expression: DuplicateChangeType.check(&changelog)
---
- rule: DuplicateChangeType
  span:
    start: 1
    end: 18446744073709551615
  path: ~
- rule: DuplicateChangeType
  span:
    start: 2
    end: 18446744073709551615
  path: ~
