src/snapshots/notabene__linter__tests__duplicate_title-2.snap
---
source: src/linter.rs
expression: DuplicateTitle.check(&changelog)
---
- rule: DuplicateTitle
  span:
    start: 2
    end: 11
  path: ~
