src/snapshots/notabene__linter__tests__duplicate_unreleased-2.snap
---
source: src/linter.rs
expression: DuplicateUnreleased.check(&changelog)
---
- rule: DuplicateUnreleased
  span:
    start: 0
    end: 17
  path: ~
