src/snapshots/notabene__linter__tests__empty_section-2.snap
---
source: src/linter.rs
expression: "lint(&changelog, &profile)"
---
- rule: EmptySection
  span:
    start: 1
    end: 18446744073709551615
  path: ~
- rule: EmptySection
  span:
    start: 2
    end: 18446744073709551615
  path: ~
- rule: EmptySection
  span:
    start: 3
    end: 18446744073709551615
  path: ~
- rule: EmptySection
  span:
    start: 4
    end: 18446744073709551615
  path: ~
