src/snapshots/notabene__linter__tests__invalid_change_type-2.snap
---
source: src/linter.rs
expression: InvalidChangeType.check(&changelog)
---
- rule: InvalidChangeType
  span:
    start: 1
    end: 18446744073709551615
  path: ~
- rule: InvalidChangeType
  span:
    start: 2
    end: 18446744073709551615
  path: ~
