src/snapshots/notabene__linter__tests__invalid_yanked-2.snap
---
source: src/linter.rs
expression: InvalidYanked.check(&changelog)
---
- rule: InvalidYanked
  span:
    start: 1
    end: 10
  path: ~
