src/snapshots/notabene__linter__tests__missing_date-2.snap
---
source: src/linter.rs
expression: "lint(&changelog, &profile)"
---
- rule: MissingDate
  span:
    start: 1
    end: 18446744073709551615
  path: ~
