src/snapshots/notabene__linter__tests__missing_title.snap
---
source: src/linter.rs
expression: MissingTitle.check(&changelog)
---
- rule: MissingTitle
  span: ~
  path: ~
