src/snapshots/notabene__linter__tests__missing_unreleased.snap
---
source: src/linter.rs
expression: MissingUnreleased.check(&changelog)
---
- rule: MissingUnreleased
  span: ~
  path: ~
