src/snapshots/notabene__linter__tests__unreleased_not_first-2.snap
---
source: src/linter.rs
expression: "lint(&changelog, &profile)"
---
- rule: UnreleasedNotFirst
  span:
    start: 1
    end: 18446744073709551615
  path: ~
